--- a/index.html
+++ b/index.html
@@ -237,7 +237,8 @@
                 </div>
                 <div class="cframebody">
                     <iframe id="certificateiframe" src="" frameborder="0" width="100%" height="100%"
-                        allow="autoplay"></iframe>
+                        allow="autoplay"
+                        ></iframe>
                 </div>
             </div>
         </div>
@@ -409,7 +410,7 @@
                                     <img src="img/chatbot.png" alt="chatbot.png" class="prgifgif" id="prgifgifn4">
                                 </div>
                                 <div class="prtitle inthemef" id="prtitlen4">
-                                    <p id="prpn4">Chatbot using Diagflow</p>
+                                    <p id="prpn4">Chatbot using Dialogflow</p>
                                     <div class="proptions" id="proptionn4">
                                         <i class="fas fa-ellipsis-v"></i>
                                     </div>
@@ -1119,6 +1120,46 @@
                             <div class="expercardheadbody darkmodebg darkmodefont">
                                 <div class="expercardhead">
                                     <div class="expercardlogo"
+                                        onclick="pageOpen('shadowfax')">
+                                        <img src="img/sfx.png" alt="Shadowfax" style="width: 120px;">
+                                    </div>
+                                    <div class="expercardtitle inthemef"
+                                        onclick="pageOpen('shadowfax')">
+                                        <p> SHADOWFAX</p>
+                                    </div>
+                                    <div class="expercardrole">
+                                        <p>Lead - Analytics</p>
+                                    </div>
+                                </div>
+                                <hr>
+                                <div class="expercardbody">
+                                    <p id="expercardintro">Yet to be added.</p>
+                                    <em>
+                                        <ul>
+                                            <li>
+                                                <p>Yet to be added.</p>
+                                            </li>
+                                            <li>
+                                                <p>Yet to be added.
+                                                </p>
+                                            </li>
+                                            <li>
+                                                <p>Yet to be added.
+                                                </p>
+                                            </li>
+                                        </ul>
+                                    </em>
+                                </div>
+                            </div>
+                            <hr>
+                            <div class="expercardfooter darkmodebg darkmodefont">
+                                <p>Dec'23 - Present | On-site</p>
+                            </div>
+                        </div>
+                        <div class="expercards darkmodeshadow">
+                            <div class="expercardheadbody darkmodebg darkmodefont">
+                                <div class="expercardhead">
+                                    <div class="expercardlogo"
                                         onclick="pageOpen('frugaltesting')">
                                         <img src="img/ft.png" alt="coursera">
                                     </div>
@@ -1132,7 +1173,7 @@
                                 </div>
                                 <hr>
                                 <div class="expercardbody">
-                                    <p id="expercardintro"><b>Developed automation scripts </b>for <b>ONELERN </b>
+                                    <p id="expercardintro"><b>Worked </b>for <b>ONELERN </b>
                                         and <b>NPCI</b> Projects.</p>
                                     <em>
                                         <ul>
@@ -1227,8 +1268,8 @@
                                     <p id="expercardintro"><b>Bachelors' of Technology</b> </p>
                                     <em>
                                         <ul>
-                                            <li>Branch- Computer Science and Engineering</li>
-                                            <li>Engineering Minor - Data Science</li>
+                                            <li>Major- Computer Science and Engineering</li>
+                                            <li>Minor - Data Science</li>
                                         </ul>
                                     </em>
                                 </div>
@@ -1250,6 +1291,38 @@
                 </div>
                 <div class="awardscontainer">
                     <div class="awardscontent">
+                        <div class="awardcard darkmodebg darkmodefont darkmodeshadow">
+                            <div class="awardcardhead">
+                                <p class="awardtitle inthemef" onclick="viewCertificate(`DAECISCO`)">
+                                    Data Analytics Essentials by Cisco</p>
+                                <p class="awardtype">Certificate of Completion | Oct 2023</p>
+                            </div>
+                            <div class="awardcardbody">
+                                <ul>
+                                    <li>
+                                        I have been certified by Microsoft and LinkedIn Learning for completing the
+                                        course.
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+
+                        <div class="awardcard darkmodebg darkmodefont darkmodeshadow">
+                            <div class="awardcardhead">
+                                <p class="awardtitle inthemef" onclick="viewCertificate(`PYSQLDS`)">
+                                    Python and SQL for Data Science</p>
+                                <p class="awardtype">Certificate of Excellence | Sep 2023</p>
+                            </div>
+                            <div class="awardcardbody">
+                                <ul>
+                                    <li>
+                                        I have been certified by Scaler Academy for completing the
+                                        course.
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+
                         <div class="awardcard darkmodebg darkmodefont darkmodeshadow">
                             <div class="awardcardhead">
                                 <p class="awardtitle inthemef" onclick="viewCertificate(`DAMLL`)">
