Updated SFX work

--- a/index.html
+++ b/index.html
@@ -1114,18 +1114,18 @@
                                 </div>
                                 <hr>
                                 <div class="expercardbody">
-                                    <p id="expercardintro">Yet to be added.</p>
+                                    <p id="expercardintro">Worked on <b>Cost, Productivity</b> and <b>Performance</b> Optimization.</p>
                                     <em>
                                         <ul>
                                             <li>
-                                                <p>Yet to be added.</p>
+                                                <p>Attained a remarkable 98% accuracy in cleaning the entire employee database, a first in the company's 9-year history.</p>
                                             </li>
                                             <li>
-                                                <p>Yet to be added.
+                                                <p>Applied analytical insights to optimize manpower allocation in the East region, resulting in a remarkable 60% increase in productivity.
                                                 </p>
                                             </li>
                                             <li>
-                                                <p>Yet to be added.
+                                                <p>Conducted in-depth analysis of hub performance, contributing to significant improvements across the network.
                                                 </p>
                                             </li>
                                         </ul>
@@ -1134,7 +1134,7 @@
                             </div>
                             <hr>
                             <div class="expercardfooter darkmodebg darkmodefont">
-                                <p>Dec'23 - Present | On-site</p>
+                                <p>Dec'23 - Jul'24 | On-site</p>
                             </div>
                         </div>
                         <div class="expercards darkmodeshadow">
@@ -1152,7 +1152,7 @@
                                 </div>
                                 <hr>
                                 <div class="expercardbody">
-                                    <p id="expercardintro"><b>Worked </b>for <b>ONELERN </b>
+                                    <p id="expercardintro"> Worked for <b>ONELERN </b>
                                         and <b>NPCI</b> Projects.</p>
                                     <em>
                                         <ul>
@@ -1202,7 +1202,7 @@
                                 </div>
                                 <hr>
                                 <div class="expercardbody">
-                                    <p id="expercardintro"> <b>Summmer Training</b> on: "<b>Modern BigData
+                                    <p id="expercardintro"> Summmer Training on: "<b>Modern BigData
                                             analysis with SQL</b>"</p>
                                     <em>
                                         <ul>
