Added masters details

--- a/index.html
+++ b/index.html
@@ -163,7 +163,8 @@
                             <i class="fas fa-briefcase"></i>
                         </div>
                         <div class="navtitle darkmodefont">
-                            <p>Experience</p>
+                            <p>Experience/</p>
+                            <p>Education</p>
                         </div>
                     </div>
                 </a>
@@ -1099,7 +1100,46 @@
                 </div>
                 <div class="expercontainer   darkmodefont">
                     <div class="experallcards">
+
                         <div class="expercards darkmodeshadow">
+                            <div class="experdefine inthemeb ">
+                                <p><b><i class="fas fa-user-graduate"></i> &nbsp; Education</b></p>
+                            </div>
+                            <div class="expercardheadbody darkmodebg darkmodefont">
+                                <div class="expercardhead">
+                                    <div class="expercardlogo" onclick="pageOpen('UB')">
+                                        <img src="img/ub.png" alt="Shadowfax">
+                                    </div>
+                                    <div class="expercardtitle inthemef" onclick="pageOpen('UB')">
+                                        <p> UNIVERSITY AT BUFFALO</p>
+                                    </div>
+                                    <div class="expercardrole">
+                                        <p>Student</p>
+                                    </div>
+                                </div>
+                                <hr>
+                                <div class="expercardbody">
+                                    <p id="expercardintro"><b>Master of Science (MS)</b></p>
+                                    <em>
+                                        <ul>
+                                            <li>
+                                                <p>Pursuing Masters in Data Science at State University of Newyork at Buffalo</p>
+                                            </li>
+                                        </ul>
+                                    </em>
+                                </div>
+                            </div>
+                            <hr>
+                            <div class="expercardfooter darkmodebg darkmodefont">
+                                <p>Aug'24 - Jun'26 | Buffalo, USA</p>
+                            </div>
+                        </div>
+
+                        <!--  -->
+                        <div class="expercards darkmodeshadow">
+                            <div class="experdefine inthemeb ">
+                                <p><b><i class="fas fa-briefcase"></i> &nbsp; Experience</b></p>
+                            </div>
                             <div class="expercardheadbody darkmodebg darkmodefont">
                                 <div class="expercardhead">
                                     <div class="expercardlogo" onclick="pageOpen('shadowfax')">
@@ -1109,7 +1149,7 @@
                                         <p> SHADOWFAX</p>
                                     </div>
                                     <div class="expercardrole">
-                                        <p>Lead - Analytics</p>
+                                        <p>Lead - Data Analytics</p>
                                     </div>
                                 </div>
                                 <hr>
@@ -1134,10 +1174,13 @@
                             </div>
                             <hr>
                             <div class="expercardfooter darkmodebg darkmodefont">
-                                <p>Dec'23 - Jul'24 | On-site</p>
+                                <p>Dec'23 - Jul'24 | Bangalore, India</p>
                             </div>
                         </div>
                         <div class="expercards darkmodeshadow">
+                            <div class="experdefine inthemeb ">
+                                <p><b><i class="fas fa-briefcase"></i> &nbsp; Experience</b></p>
+                            </div>
                             <div class="expercardheadbody darkmodebg darkmodefont">
                                 <div class="expercardhead">
                                     <div class="expercardlogo" onclick="pageOpen('frugaltesting')">
@@ -1184,10 +1227,13 @@
                             </div>
                             <hr>
                             <div class="expercardfooter darkmodebg darkmodefont">
-                                <p>June'22 - June'23 | On-site</p>
+                                <p>June'22 - June'23 | Hyderabad, India</p>
                             </div>
                         </div>
                         <div class="expercards darkmodeshadow">
+                            <div class="experdefine inthemeb ">
+                                <p><b><i class="fas fa-user-graduate"></i> &nbsp; Education</b></p>
+                            </div>
                             <div class="expercardheadbody darkmodebg darkmodefont">
                                 <div class="expercardhead">
                                     <div class="expercardlogo" onclick="pageOpen('coursera')">
@@ -1227,6 +1273,9 @@
                             </div>
                         </div>
                         <div class="expercards darkmodeshadow">
+                            <div class="experdefine inthemeb ">
+                                <p><b><i class="fas fa-user-graduate"></i> &nbsp; Education</b></p>
+                            </div>
                             <div class="expercardheadbody darkmodebg darkmodefont" id="expercardheadbodylpu">
                                 <div class="expercardhead">
                                     <div class="expercardlogo" onclick="pageOpen('lpu')">
@@ -1241,7 +1290,7 @@
                                 </div>
                                 <hr>
                                 <div class="expercardbody">
-                                    <p id="expercardintro"><b>Bachelors' of Technology</b> </p>
+                                    <p id="expercardintro"><b>Bachelors' of Technology (B.Tech)</b> </p>
                                     <em>
                                         <ul>
                                             <li>Major- Computer Science and Engineering</li>
@@ -1252,7 +1301,7 @@
                             </div>
                             <hr>
                             <div class="expercardfooter darkmodebg darkmodefont">
-                                <p>August'19 - July'23 | Phagwara, Punjab</p>
+                                <p>August'19 - July'23 | Phagwara, India</p>
                             </div>
                         </div>
                     </div>
