Updtaed responsive code

--- a/index.html
+++ b/index.html
@@ -1028,7 +1028,7 @@
                             </div>
                             <div class="skillname">
                                 <div class="skillimg">
-                                    <img src="img/mongodb.png" alt="mongodb" id="mongoimg">
+                                    <img src="img/mongodb.png" alt="mongodb">
                                 </div>
                                 <div class="skillnamename">
                                     <h2>MongoDB</h2>
@@ -1036,7 +1036,7 @@
                             </div>
                             <div class="skillname">
                                 <div class="skillimg">
-                                    <img src="img/php.png" alt="php" id="phpimg">
+                                    <img src="img/php.png" alt="php" >
                                 </div>
                                 <div class="skillnamename">
                                     <h2>PHP</h2>
@@ -1574,7 +1574,7 @@
                     <div class="hiremeshashank flip-card">
                         <div class="flip-card-inner">
                             <div class="flip-card-front">
-                                <img src="img/hiremefront.png" alt="Avatar" style="width:300px;height:300px;">
+                                <img src="img/hiremefront.png" alt="Avatar" style="width:100%;height:100%;">
                             </div>
                             <div class="flip-card-back">
                                 <div class="darkmodebg hiremecontainer">
@@ -1598,7 +1598,7 @@
                                             <img src="img/part-time.png" alt="">
                                         </div>
                                         <div class="darkmodefont hireopttype">
-                                            Freelance/Project
+                                            Freelance/ Project
                                         </div>
                                         <div class="hireoptarrow">
                                             <i class="fas fa-solid fa-angle-right"></i>
@@ -1697,7 +1697,7 @@
 
 
                     <div class="contactfooter">
-                        <p>&copy; 2022-2023 | All rights reserved with Copyright & Trademarks | Made by Shashank</p>
+                        <p>&copy; 2023-2024 | All rights reserved with Copyright & Trademarks | Made by Shashank</p>
                     </div>
                 </div>
             </section>
