Updated Certificate links and resized skill images

--- a/index.html
+++ b/index.html
@@ -892,7 +892,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="prs darkmodebg darkmodefont darkmodeshadow" id="prs4">
+                        <!-- <div class="prs darkmodebg darkmodefont darkmodeshadow" id="prs4">
                             <div class="prsonoff" id="prsonoff4">
                                 <div class="prgif" id="prgif4">
                                     <img src="img/m1.webp" alt="" class="prgifgif" id="prgifgif4">
@@ -935,7 +935,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                         <div class="prs darkmodebg darkmodefont darkmodeshadow" id="prs5">
                             <div class="prsonoff" id="prsonoff5">
                                 <div class="prgif" id="prgif5">
@@ -1023,7 +1023,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="prs darkmodebg darkmodefont darkmodeshadow" id="prs7">
+                        <!-- <div class="prs darkmodebg darkmodefont darkmodeshadow" id="prs7">
                             <div class="prsonoff" id="prsonoff7">
                                 <div class="prgif" id="prgif7">
                                     <img src="img/i1.webp" alt="" class="prgifgif" id="prgifgif7">
@@ -1066,7 +1066,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </section>
@@ -1347,7 +1347,7 @@
                             </div>
                             <hr>
                             <div class="expercardfooter darkmodebg darkmodefont">
-                                <p>Aug'24 - Jun'25 | Buffalo, USA</p>
+                                <p>Aug'24 - Dec'25 | Buffalo, USA</p>
                             </div>
                         </div>
 
@@ -1420,18 +1420,20 @@
                                     <em>
                                         <ul>
                                             <li>
-                                                <p>Developed and implemented automation frameworks for multiple
-                                                    projects,
-                                                    resulting in a significant reduction in manual testing efforts.</p>
+                                                <p>Built and implemented automation frameworks for 4 diverse projects,
+                                                    significantly reducing manual testing and increasing efficiency by
+                                                    30%.</p>
                                             </li>
                                             <li>
-                                                <p>Optimized testing methodologies through innovative data-driven
-                                                    solutions, increasing overall efficiency by 30%.
+                                                <p>Played a key role in developing the Central Bank Digital Currency
+                                                    (CBDC) product in collaboration with NPCI, successfully delivering
+                                                    and publishing it globally.
                                                 </p>
                                             </li>
                                             <li>
-                                                <p>Partnered with stakeholders to ensure alignment across teams,
-                                                    delivering projects on time with improved testing outcomes.
+                                                <p>Enhanced testing processes and optimized methodologies through data
+                                                    analysis, actively contributing to cross-functional teams for
+                                                    continuous improvement.
                                                 </p>
                                             </li>
                                         </ul>
