Added project years

--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
 <head>
-
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -405,6 +404,7 @@
                     <div class="prcontent">
                         <!-- Diabetes prediction -->
                         <div class="prs darkmodebg darkmodefont darkmodeshadow" id="prsn6">
+                            <div class="pryear inthemeb" id="pryearn6">2024</div>
                             <div class="prsonoff" id="prsonoffn6">
                                 <div class="prgif" id="prgifn6">
                                     <img src="img/diabpredict.webp" alt="diabetesprediction.png" class="prgifgif"
@@ -458,6 +458,7 @@
                         </div>
                         <!-- Heart Attack prediction -->
                         <div class="prs darkmodebg darkmodefont darkmodeshadow" id="prsn5">
+                            <div class="pryear inthemeb" id="pryearn5">2024</div>
                             <div class="prsonoff" id="prsonoffn5">
                                 <div class="prgif" id="prgifn5">
                                     <img src="img/heartpredict.png" alt="heartpredict.png" class="prgifgif"
@@ -521,6 +522,7 @@
                         </div>
                         <!-- pr Chat bot application -->
                         <div class="prs darkmodebg darkmodefont darkmodeshadow" id="prsn4">
+                            <div class="pryear inthemeb" id="pryearn4">2023</div>
                             <div class="prsonoff" id="prsonoffn4">
                                 <div class="prgif" id="prgifn4">
                                     <img src="img/chatbot.png" alt="chatbot.png" class="prgifgif" id="prgifgifn4">
@@ -583,6 +585,7 @@
 
                         <!-- pr Road accidents dashboard -->
                         <div class="prs darkmodebg darkmodefont darkmodeshadow" id="prsn3">
+                            <div class="pryear inthemeb" id="pryearn3">2023</div>
                             <div class="prsonoff" id="prsonoffn3">
                                 <div class="prgif" id="prgifn3">
                                     <img src="img/road-accidents-dashboard.png" alt="road-accidents-dashboard.png"
@@ -636,6 +639,7 @@
 
                         <!-- pr easychat website -->
                         <div class="prs darkmodebg darkmodefont darkmodeshadow" id="prsn2">
+                            <div class="pryear inthemeb" id="pryearn2">2022</div>
                             <div class="prsonoff" id="prsonoffn2">
                                 <div class="prgif" id="prgifn2">
                                     <img src="img/easychat.webp" alt="" class="prgifgif" id="prgifgifn2">
@@ -680,6 +684,7 @@
 
                         <!-- pr portfolio  -->
                         <div class="prs darkmodebg darkmodefont darkmodeshadow" id="prsn1">
+                            <div class="pryear inthemeb" id="pryearn1">2022</div>
                             <div class="prsonoff" id="prsonoffn1">
                                 <div class="prgif" id="prgifn1">
                                     <img src="img/p1.webp" alt="" class="prgifgif" id="prgifgifn1">
@@ -725,6 +730,7 @@
                         </div>
                         <!-- pr excel project -->
                         <div class="prs darkmodebg darkmodefont darkmodeshadow" id="prsn0">
+                            <div class="pryear inthemeb" id="pryearn0">2022</div>
                             <div class="prsonoff" id="prsonoffn0">
                                 <div class="prgif" id="prgifn0">
                                     <img src="img/ps1.webp" alt="" class="prgifgif" id="prgifgifn0">
@@ -768,6 +774,7 @@
                         </div>
                         <!-- ============= -->
                         <div class="prs darkmodebg darkmodefont darkmodeshadow" id="prs1">
+                            <div class="pryear inthemeb" id="pryear1">2021</div>
                             <div class="prsonoff" id="prsonoff1">
                                 <div class="prgif" id="prgif1">
                                     <img src="img/f1.png" alt="" class="prgifgif" id="prgifgif1">
@@ -808,6 +815,7 @@
                             </div>
                         </div>
                         <div class="prs darkmodebg darkmodefont darkmodeshadow" id="prs2">
+                            <div class="pryear inthemeb" id="pryear2">2021</div>
                             <div class="prsonoff" id="prsonoff2">
                                 <div class="prgif" id="prgif2">
                                     <img src="img/mp1.webp" alt="" class="prgifgif" id="prgifgif2">
@@ -852,6 +860,7 @@
                             </div>
                         </div>
                         <div class="prs darkmodebg darkmodefont darkmodeshadow" id="prs3">
+                            <div class="pryear inthemeb" id="pryear3">2021</div>
                             <div class="prsonoff" id="prsonoff3">
                                 <div class="prgif" id="prgif3">
                                     <img src="img/c1.png" alt="" class="prgifgif" id="prgifgif3">
@@ -937,6 +946,7 @@
                             </div>
                         </div> -->
                         <div class="prs darkmodebg darkmodefont darkmodeshadow" id="prs5">
+                            <div class="pryear inthemeb" id="pryear5">2021</div>
                             <div class="prsonoff" id="prsonoff5">
                                 <div class="prgif" id="prgif5">
                                     <img src="img/t1.webp" alt="" class="prgifgif" id="prgifgif5">
@@ -981,6 +991,7 @@
                             </div>
                         </div>
                         <div class="prs darkmodebg darkmodefont darkmodeshadow" id="prs6">
+                            <div class="pryear inthemeb" id="pryear6">2021</div>
                             <div class="prsonoff" id="prsonoff6">
                                 <div class="prgif" id="prgif6">
                                     <img src="img/employeeManag.png" alt="" class="prgifgif" id="prgifgif6">
@@ -1762,8 +1773,8 @@
                             <div class="contactoptdet inthemef" onclick="pageOpen('mail')">
                                 <p>shashankmankala.5@gmail.com</p>
                             </div>
-                            <p>Hyderabad, Telangana, India</p>
-                            <p>Contact no. +9170xxxxxxxx</p>
+                            <p>Buffalo, New York, United States</p>
+                            <p>Contact no. +17165xxxxxx</p>
                         </div>
                         <div class="contactfooterdiv">
                             <div class="contactlinks">
@@ -1912,7 +1923,7 @@
 
 
                     <div class="contactfooter">
-                        <p>&copy; 2023-2024 | All rights reserved with Copyright & Trademarks | Made by Shashank</p>
+                        <p>&copy; 2024-2025 | All rights reserved with Copyright & Trademarks | Made by Shashank Mankala</p>
                     </div>
                 </div>
             </section>
